Mon Jul 23 18:47:26 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager.h:
          Doxygen improvements

        * connectors/dds4ccm/impl/ConditionManager.cpp (query):
          Check if qc_reader is nil before using it

Mon Jul 23 17:38:31 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
          Layout changes

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
          Layout changes to logging messages

Mon Jul 23 14:01:10 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
          At the moment we delete the domain participant, first delete
          all contained entities. We have already deleted everything in dds4ccm
          but it could be that some topic is still registered in the dp, because
          we can only delete a topic on a dp when it is not used at all. When
          using find_topic/delete_topic, all delete_topics can only be done when
          all datareaders/datawriters have been deleted, something which will
          just not work with dds4ccm

Mon Jul 23 13:36:41 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/DDS_Write_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipantManager.h:
          More logging

Mon Jul 23 11:25:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ContentFilterSetting.cpp:
          Removed incorrect duplicate

Mon Jul 23 07:56:38 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
          Fixed tracing

        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
          Set local variables to nil to improve shutdown behavior
