@@ -1,3 +1,10 @@
+Mon Jul 23 19:24:09 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
+        * connectors/dds4ccm/impl/Getter_T.cpp:
+          Init the condition manager from subscriber base instead from the
+          getter
+
 Mon Jul 23 18:47:26 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/ConditionManager.h:
